一通り実装

--- a/Japanese.lproj/Localizable.strings
+++ b/Japanese.lproj/Localizable.strings
@@ -1,10 +1,13 @@
-/*getPerlScript*/
+/*UnixScriptExecuter*/
 "aDocument" = "書類";
 "isModified" = "は修正されています。";
 "startQuote" ="“";
 "endQuote" ="”";
 "doYouSave" = "実行前に保存しますか？";
 "isNotSaved" = "は保存されていません。";
+
+/*UnixScriptExecuter*/
+"invalidCommand" = "には実行コマンドが設定されていません。";
 
 /*ScriptListObj::renameScript*/
 "enterNewName" = "新しいファイル名を入力してください";
@@ -17,3 +20,6 @@
 
 /*ScriptListObj::makeNewScript*/
 "isExists" = "は既に存在します。\r別のスクリプト名を入力してください。";
+
+/*ScriptListObj::getSelectedScript*/
+"noOriginalItem" = "エイリアスファイルのオリジナルが見つかりません。";
